fixed anchor tag redirect going too high and messing with sidebar navigation

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -56,16 +56,16 @@ html, body {
 a[id]:before {
   display: block;
   content: " ";
-  margin-top: -77px;
-  height: 77px;
+  margin-top: -67px;
+  height: 67px;
   visibility: hidden;
 }
 
 h1:before {
   display: block;
   content: " ";
-  margin-top: -77px;
-  height: 77px;
+  margin-top: -67px;
+  height: 67px;
   visibility: hidden;
 }
 
